# andy

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  build-vercel.sh  package.json  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question_or_idea.yml
.github/workflows/: ci.yml
api/: index.rs  index.ts
apps/api/: package.json
apps/api/src/: cron-auth.test.ts  cron-auth.ts  cron-budget-checks.test.ts  cron-budget-checks.ts  cron-budget-copy.test.ts  cron-budget-copy.ts  cron-daily.test.ts  cron-daily.ts  cron-goal-checks.test.ts  cron-goal-checks.ts  cron-goal-copy.test.ts  cron-goal-copy.ts  cron-hygiene.test.ts  cron-hygiene.ts  cron-recurring-checks.test.ts  cron-recurring-checks.ts  cron-recurring-copy.test.ts  cron-recurring-copy.ts  cron-route.test.ts  cron-route.ts  cron-test-calls.ts  cron-test-deps.ts  cron-test-fixtures.ts  cron-test-harness.ts  cron-types.ts  cron-weekly-summary.test.ts  cron-weekly-summary.ts  fast-path.ts  handler-budget-reaction.test.ts  handler-budget-reaction.ts  handler-error-paths.test.ts  handler-flush-intents.test.ts  handler-flush-intents.ts  handler-post-commit-effects.test.ts  handler-post-commit-effects.ts  handler-test-harness.ts  handler-types.ts  handler.test.ts  handler.ts  inbound-rate-limit.test.ts  (+14 more)
crates/ai/: Cargo.toml
crates/ai/src/: agent.rs  finance_tools.rs  lib.rs  model.rs  openrouter.rs  policy.rs
crates/ai/tests/: policy_invariants.rs
crates/api/: Cargo.toml
crates/api/src/: cron.rs  inbound.rs  lib.rs  main.rs  outbound.rs  routes.rs  service.rs
crates/db/: Cargo.toml
crates/db/src/: client.rs  confirmations.rs  integration_tests.rs  lib.rs  migrations.rs  ops.rs  queries.rs  ratelimit.rs  read.rs  sql.rs  writes.rs
crates/shared/: Cargo.toml
crates/shared/src/: allowlist.rs  analytics.rs  budget.rs  categories.rs  centavos.rs  date_validation.rs  dedup.rs  domain.rs  env.rs  errors.rs  expense_category.rs  goals.rs  lib.rs  log.rs  memory.rs  money.rs  percent.rs  security.rs  time.rs
crates/shared/tests/: proptest_invariants.rs
public/: index.html
public/demo/: index.html  messages.vtt
scripts/: ci-gate-config.test.ts  ci-local.sh  ci-local.test.ts  probe-openrouter-models.ts
scripts/typescript/: check-no-excuse-rules.test.ts  check-no-excuse-rules.ts  no-excuse-catches.ts  no-excuse-cli.ts  no-excuse-core.ts  no-excuse-literals.ts  no-excuse-non-null.ts  no-excuse-rule-metadata.ts  no-excuse-scan-context.ts  no-excuse-types.ts
xtask/: Cargo.toml
xtask/src/: main.rs
