[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
andy_ai = { path = "../crates/ai" }
andy_api = { path = "../crates/api" }
andy_db = { path = "../crates/db" }
andy_shared = { path = "../crates/shared" }
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
