[package]
name = "andy_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
andy_ai = { path = "../ai" }
andy_db = { path = "../db" }
andy_shared = { path = "../shared" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
vercel_runtime = { version = "2.4.0", features = ["axum"] }

[dev-dependencies]
tower.workspace = true
wiremock.workspace = true

[lints]
workspace = true
